more readable build logs

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ install:
   - mv .bazelrc.travis .bazelrc
   
 script:
-  - bazel test --test_output=errors //foo/...
+  - bazel test --color=no --curses=no --show_timestamps --test_output=errors //foo/...
