--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: go
 
 before_install:
-  - wget --no-clobber https://github.com/bazelbuild/bazel/releases/download/0.8.1/bazel_0.8.1-linux-x86_64.deb
-  - sudo dpkg -i bazel_0.8.1-linux-x86_64.deb
+  - wget --no-clobber https://github.com/bazelbuild/bazel/releases/download/0.13.0/bazel_0.13.0-linux-x86_64.deb
+  - sudo dpkg -i bazel_0.13.0-linux-x86_64.deb
 
 install:
   - mv .bazelrc.travis .bazelrc
   
 script:
-  - bazel test --color=no --curses=no --show_timestamps --test_output=errors //foo/...
+  - bazel test --color=no --curses=no --show_timestamps --test_output=errors //somemain/...
