--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,9 +1,6 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_prefix")
 load("@bazel_gazelle//:def.bzl", "gazelle")
-
-go_prefix("com_github_jmhodges_bazel_bugs")
 
 gazelle(
     name = "gazelle",
-    prefix = "bazel_bugs",
+    prefix = "github.com/jmhodges/bazel_bugs",
 )
