--- a/somemain/BUILD.bazel
+++ b/somemain/BUILD.bazel
@@ -3,7 +3,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 go_library(
     name = "go_default_library",
     srcs = ["main.go"],
-    importpath = "bazel_bugs/somemain",
+    importpath = "github.com/jmhodges/bazel_bugs/somemain",
     visibility = ["//visibility:private"],
 )
 
