--- a/.github/workflows/ensure.yml
+++ b/.github/workflows/ensure.yml
@@ -13,8 +13,7 @@ jobs:
       - uses: jmhodges/ensure_latest_go@action
         id: ensure_go
         with:
-          dockerfiles:
-            - ./Dockerfile
+          dockerfiles: "./Dockerfile"
       - run: echo "##[set-output name=pr_title;]updating to latest Go release ${{ outputs.ensure_go.go_version"
         id: pr_title_maker
       - name: Create pull request
