--- a/.github/workflows/ensure.yml
+++ b/.github/workflows/ensure.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
         with:
-          ref: master
+          ref: ensure_action
       - run: pwd
       - run: ls -l
       - uses: jmhodges/ensure_latest_go@action
