--- a/.github/workflows/ensure.yml
+++ b/.github/workflows/ensure.yml
@@ -12,11 +12,11 @@ jobs:
           ref: ensure_action
       - run: pwd
       - run: ls -l
-      - uses: jmhodges/ensure_latest_go@f1045a83f2d5ca7014562b6577b1086c83e2a69a
+      - uses: jmhodges/ensure_latest_go@ba8d2c453b3496447db98d0917111aed4dae1736 # @f1045a83f2d5ca7014562b6577b1086c83e2a69a
         id: ensure_go
         with:
           dockerfiles: "./Dockerfile"
-      - run: echo "welp outputs ${{ steps.ensure_go.outputs }}"
+      - run: echo "welp outputs ${{ steps.ensure_go.outputs}}"
       # - run: echo "##[set-output name=pr_title;]updating to latest Go release ${{ steps.ensure_go.outputs.go_version}}"
       #   id: pr_title_maker
       # - name: Create pull request
