--- a/.github/workflows/ensure.yml
+++ b/.github/workflows/ensure.yml
@@ -16,7 +16,7 @@ jobs:
         id: ensure_go
         with:
           dockerfiles: "./Dockerfile"
-      - run: echo "##[set-output name=pr_title;]updating to latest Go release ${{ steps.ensure_go.outputs.go_version}}"
+      - run: echo "##[set-output name=pr_title;]update to latest Go release ${{ steps.ensure_go.outputs.go_version}}"
         id: pr_title_maker
       - name: Create pull request
         uses: peter-evans/create-pull-request@v1.5.2
