--- a/.github/workflows/ensure.yml
+++ b/.github/workflows/ensure.yml
@@ -12,7 +12,7 @@ jobs:
           ref: ensure_action
       - run: pwd
       - run: ls -l
-      - uses: jmhodges/ensure_latest_go@687232444be0b8ee9448aedaf976f46b0685fd2d # @f1045a83f2d5ca7014562b6577b1086c83e2a69a
+      - uses: jmhodges/ensure_latest_go@87c34372e39d66fe0d4f8cb11251bc6ccb67a43e
         id: ensure_go
         with:
           dockerfiles: "./Dockerfile"
